# example-sparqlwrapper

./: README.md  pyproject.toml
example-sparqlwrapper/: __init__.py
